@@ -1,7 +1,11 @@
 package co.edu.unbosque.model.persistence;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -20,7 +24,10 @@ import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
 
 import co.edu.unbosque.model.PedidoDTO;
+import co.edu.unbosque.model.ProductoDTO;
+import co.edu.unbosque.model.ProveedorDTO;
 import co.edu.unbosque.model.EmpleadoDTO;
+import co.edu.unbosque.model.LocalDTO;
 import co.edu.unbosque.model.PedidoDTO;
 import co.edu.unbosque.util.LocalDateAdapter;
 
@@ -80,10 +87,10 @@ public class ExternalHTTPRequestHandler {
 		}
 	}
 
-	public static String doPost(String url, String json, String token) {
+	public static String doPost(String url, String json) {
 		HttpRequest solicitud = HttpRequest.newBuilder().POST(HttpRequest.BodyPublishers.ofString(json))
 				.uri(URI.create(url)).header("Content-Type", "application/json")
-				.header("Authorization", "Bearer " + token).build();
+				.build();
 		HttpResponse<String> respuesta = null;
 		try {
 			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
@@ -94,24 +101,42 @@ public class ExternalHTTPRequestHandler {
 		return respuesta.statusCode() + "";
 	}
 
-	public static String doDelete(String url, String token) {
-		HttpRequest request = HttpRequest.newBuilder().DELETE().uri(URI.create(url))
-				.header("User-Agent", "Java 11 HttpClient Bot").header("Authorization", "Bearer " + token).build();
-		HttpResponse<String> response = null;
-		try {
-			response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-		} catch (IOException | InterruptedException e) {
-			e.printStackTrace();
-		}
-		System.out.println("status code -> " + response.statusCode());
-		return response.statusCode() + "";
+	public static String doDelete(String urlString) throws Exception {
+	    URL url = new URL(urlString);
+	    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+
+	    // 👇 Esto es fundamental
+	    conn.setRequestMethod("DELETE");
+	    conn.setRequestProperty("Content-Type", "application/json");
+	    conn.setDoOutput(false); // no enviamos body
+
+	    int responseCode = conn.getResponseCode();
+
+	    BufferedReader reader = new BufferedReader(new InputStreamReader(
+	            (responseCode >= 200 && responseCode < 300)
+	                    ? conn.getInputStream()
+	                    : conn.getErrorStream()
+	    ));
+
+	    StringBuilder response = new StringBuilder();
+	    String line;
+	    while ((line = reader.readLine()) != null) {
+	        response.append(line);
+	    }
+
+	    reader.close();
+	    conn.disconnect();
+
+	    System.out.println("DELETE -> " + urlString + " | Código: " + responseCode + " | Respuesta: " + response);
+	    return response.toString();
 	}
 
-	public static String doUpdate(String fullUrl, String json, String token) {
+
+
+	public static String doUpdate(String fullUrl, String json) {
 
 		HttpRequest req = HttpRequest.newBuilder().uri(URI.create(fullUrl))
-				.PUT(HttpRequest.BodyPublishers.ofString(json)).header("Content-Type", "application/json")
-				.header("Authorization", "Bearer " + token).build();
+				.PUT(HttpRequest.BodyPublishers.ofString(json)).header("Content-Type", "application/json").build();
 		HttpResponse<String> response = null;
 		try {
 			response = HTTP_CLIENT.send(req, HttpResponse.BodyHandlers.ofString());
@@ -183,8 +208,8 @@ public class ExternalHTTPRequestHandler {
 //	}
 
 	public static List<EmpleadoDTO> doGetAndConvertToDTOList(String url) {
-		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url)).header("Authorization", "Bearer ")
-				.build();
+		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
+				.header("Content-Type", "application/json").build();
 		HttpResponse<String> respuesta = null;
 		try {
 			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
@@ -207,10 +232,9 @@ public class ExternalHTTPRequestHandler {
 			return List.of();
 		}
 	}
-	
-	
+
 	public static List<PedidoDTO> doGetAndConvertToDTOListPedido(String url) {
-	
+
 		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
 				.header("Content-Type", "application/json").build();
 		HttpResponse<String> respuesta = null;
@@ -236,10 +260,112 @@ public class ExternalHTTPRequestHandler {
 		}
 	}
 
+	public static List<ProveedorDTO> doGetAndConvertToDTOListProveedor(String url) {
 
-
-
-
+		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
+				.header("Content-Type", "application/json").build();
+		HttpResponse<String> respuesta = null;
+		try {
+			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}
+		String json = respuesta.body().trim();
+		Gson gson = new GsonBuilder().create();
+		if (json.startsWith("[")) {
+			return Arrays.asList(gson.fromJson(json, ProveedorDTO[].class));
+		} else if (json.startsWith("{")) {
+			JsonElement je = JsonParser.parseString(json);
+			if (je.getAsJsonObject().has("data")) {
+				return Arrays.asList(gson.fromJson(je.getAsJsonObject().get("data"), ProveedorDTO[].class));
+			} else {
+				ProveedorDTO obj = gson.fromJson(json, ProveedorDTO.class);
+				return Arrays.asList(obj);
+			}
+		} else {
+			return List.of();
+		}
+	}
 	
+	public static List<LocalDTO> doGetAndConvertToDTOListLocal(String url) {
+
+		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
+				.header("Content-Type", "application/json").build();
+		HttpResponse<String> respuesta = null;
+		try {
+			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}
+		String json = respuesta.body().trim();
+		Gson gson = new GsonBuilder().create();
+		if (json.startsWith("[")) {
+			return Arrays.asList(gson.fromJson(json, LocalDTO[].class));
+		} else if (json.startsWith("{")) {
+			JsonElement je = JsonParser.parseString(json);
+			if (je.getAsJsonObject().has("data")) {
+				return Arrays.asList(gson.fromJson(je.getAsJsonObject().get("data"), LocalDTO[].class));
+			} else {
+				LocalDTO obj = gson.fromJson(json, LocalDTO.class);
+				return Arrays.asList(obj);
+			}
+		} else {
+			return List.of();
+		}
+	}
+	
+	public static List<ProductoDTO> doGetAndConvertToDTOListProducto(String url) {
+
+		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
+				.header("Content-Type", "application/json").build();
+		HttpResponse<String> respuesta = null;
+		try {
+			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}
+		String json = respuesta.body().trim();
+		Gson gson = new GsonBuilder().create();
+		if (json.startsWith("[")) {
+			return Arrays.asList(gson.fromJson(json, ProductoDTO[].class));
+		} else if (json.startsWith("{")) {
+			JsonElement je = JsonParser.parseString(json);
+			if (je.getAsJsonObject().has("data")) {
+				return Arrays.asList(gson.fromJson(je.getAsJsonObject().get("data"), ProductoDTO[].class));
+			} else {
+				ProductoDTO obj = gson.fromJson(json, ProductoDTO.class);
+				return Arrays.asList(obj);
+			}
+		} else {
+			return List.of();
+		}
+	}
+	
+	public static List<EmpleadoDTO> doGetAndConvertToDTOListEmpleado(String url) {
+
+		HttpRequest solicitud = HttpRequest.newBuilder().GET().uri(URI.create(url))
+				.header("Content-Type", "application/json").build();
+		HttpResponse<String> respuesta = null;
+		try {
+			respuesta = HTTP_CLIENT.send(solicitud, HttpResponse.BodyHandlers.ofString());
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}
+		String json = respuesta.body().trim();
+		Gson gson = new GsonBuilder().create();
+		if (json.startsWith("[")) {
+			return Arrays.asList(gson.fromJson(json, EmpleadoDTO[].class));
+		} else if (json.startsWith("{")) {
+			JsonElement je = JsonParser.parseString(json);
+			if (je.getAsJsonObject().has("data")) {
+				return Arrays.asList(gson.fromJson(je.getAsJsonObject().get("data"), EmpleadoDTO[].class));
+			} else {
+				EmpleadoDTO obj = gson.fromJson(json, EmpleadoDTO.class);
+				return Arrays.asList(obj);
+			}
+		} else {
+			return List.of();
+		}
+	}
 
 }
